css/main.css
* {
  box-sizing: border-box;
}

html {
  color: #222;
  font-size: 1em;
  line-height: 1.4;
}

::-moz-selection {
  background: #b3d4fc;
  text-shadow: none;
}

::selection {
  background: #b3d4fc;
  text-shadow: none;
}

/*
 * A better looking default horizontal rule
 */

hr {
  display: block;
  height: 1px;
  border: 0;
  border-top: 1px solid #ccc;
  margin: 1em 0;
  padding: 0;
}

/*
 * Remove the gap between audio, canvas, iframes,
 * images, videos and the bottom of their containers:
 * https://github.com/h5bp/html5-boilerplate/issues/440
 */

audio,
canvas,
iframe,
img,
svg,
video {
  vertical-align: middle;
}

fieldset {
  border: 0;
  margin: 0;
  padding: 0;
}

textarea {
  resize: vertical;
}

/* ==========================================================================
   Browser Upgrade Prompt
   ========================================================================== */

.browserupgrade {
  margin: 0.2em 0;
  background: #ccc;
  color: #000;
  padding: 0.2em 0;
}

/* ==========================================================================
   Author's custom styles
   ========================================================================== */
.main-container {
  display: grid;
  grid-column-gap: 23px;
  grid-template-columns: 1fr auto 1fr;
  grid-template-rows: 50px auto 1fr;
  padding: 40px;
  width: 100%;
  height: 100vh;
}

.shape-contain {
  display: flex;
  justify-content: center;
  align-items: flex-end;
  width: 40vw;
  min-height: 80vh;
  grid-column: 2 / 3;
  grid-row: 2 / 3;
  justify-self: center;
  align-self: end;
  position: relative;
}

.subtitle-container {
  grid-column: 2/3;
}

.subtitle-container .main-title, .subtitle-container .subtitle{
  display: inline;
}

.subtitle-container .main-title {
  font-size: 2.75rem;
  font-family: Nordique Pro;
  font-weight: 600;
}

.subtitle-container .subtitle {
  font-size: 2.75rem;
  font-family: Nordique Pro;
  font-weight: 400;
  margin-left: 0.75rem;
}

#main-blurb{
  grid-column: 3 / 4;
  font-size: 0.85rem;
  font-family: Nordique Pro;
  font-weight: 400;
}

.shape-contain .shape {
  display: block;
  position: absolute;
  bottom: -10%;
}

#full-circ {
  fill: #0093DA;
}\
#pacman {
  fill: #005EB8;
}

#semi-circ{
  fill: #DB3EB1
}

#qrtr-circ{
  fill: #FF6720;
}

/* outer hover */
#full-circ.fullhover {
  fill: #4490CA;
}

#pacman.fullhover{
  fill: #CDD2E9;
}

#semi-circ.fullhover{
  fill: #EAD8E7
}

#qrtr-circ.fullhover{
  fill: #F8DDCA;
}

/* pacman hover */
#full-circ.pachover {
  fill: #D6E1F2;
}

#pacman.pachover{
  fill: #4E5FAB;
}

#semi-circ.pachover{
  fill: #EAD8E7;
}

#qrtr-circ.pachover{
  fill: #F8DDCA;
}

/* semi circle hover */
#full-circ.semihover {
  fill: #D6E1F2;
}

#pacman.semihover{
  fill: #CDD2E9;
}

#semi-circ.semihover{
  fill: #BB5698;
}

#qrtr-circ.semihover{
  fill: #F8DDCA;
}

/* qrtr circle hover */
#full-circ.qrtrhover {
  fill: #D6E1F2;
}

#pacman.qrtrhover{
  fill: #CDD2E9;
}

#semi-circ.qrtrhover{
  fill: #EAD8E7;
}

#qrtr-circ.qrtrhover{
  fill: #E26F3B;
}



.speakers-container{
  display: grid;
  grid-column-gap: 12px;
  grid-template-columns: repeat(5, 16.6%) 1fr;
  padding: 40px;
  width: 100%;
  height: 100vh;
}

.speakers-container .featured-subheader{
  font-family: Futura PT;
  font-weight: 500;
  text-transform: capitalize;
  font-size: 1.35vw;
  margin: none;
}

.speakers-container .speaker-list-wrapper{
  display: block;
  width: 100%;
  grid-column: 1/4;
  border: 1px solid black;
  transform: rotate(-90deg);
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: flex-end;
}
.speakers-container .speaker{
  margin-bottom: 1rem;
}
.speakers-container .speaker h2{
  font-family: Futura PT;
  font-weight: 500;
  font-size: 3.5vw;;
  margin: 0;
  line-height: 1;
}
.speakers-container .speaker p{
  font-family: Futura PT;
  font-weight: 100;
  font-size: 1.35vw;
  margin: 0;
  line-height: 1;
}
/* ==========================================================================
   Helper classes
   ========================================================================== */

/*
 * Hide visually and from screen readers
 */

.hidden {
  display: none !important;
}

/*
* Hide only visually, but have it available for screen readers:
* https://snook.ca/archives/html_and_css/hiding-content-for-accessibility
*
* 1. For long content, line feeds are not interpreted as spaces and small width
*    causes content to wrap 1 word per line:
*    https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe
*/

.sr-only {
  border: 0;
  clip: rect(0, 0, 0, 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
  /* 1 */
}

/*
* Extends the .sr-only class to allow the element
* to be focusable when navigated to via the keyboard:
* https://www.drupal.org/node/897638
*/

.sr-only.focusable:active,
.sr-only.focusable:focus {
  clip: auto;
  height: auto;
  margin: 0;
  overflow: visible;
  position: static;
  white-space: inherit;
  width: auto;
}

/*
* Hide visually and from screen readers, but maintain layout
*/

.invisible {
  visibility: hidden;
}

/*
* Clearfix: contain floats
*
* For modern browsers
* 1. The space content is one way to avoid an Opera bug when the
*    `contenteditable` attribute is included anywhere else in the document.
*    Otherwise it causes space to appear at the top and bottom of elements
*    that receive the `clearfix` class.
* 2. The use of `table` rather than `block` is only necessary if using
*    `:before` to contain the top-margins of child elements.
*/

.clearfix:before,
.clearfix:after {
  content: " ";
  /* 1 */
  display: table;
  /* 2 */
}

.clearfix:after {
  clear: both;
}



/* ==========================================================================
   EXAMPLE Media Queries for Responsive Design.
   These examples override the primary ('mobile first') styles.
   Modify as content requires.
   ========================================================================== */

@media only screen and (min-width: 35em) {
  /* Style adjustments for viewports that meet the condition */
}

@media print,
  (-webkit-min-device-pixel-ratio: 1.25),
  (min-resolution: 1.25dppx),
  (min-resolution: 120dpi) {
  /* Style adjustments for high resolution devices */
}




/* ==========================================================================
   Print styles.
   Inlined to avoid the additional HTTP request:
   https://www.phpied.com/delay-loading-your-print-css/
   ========================================================================== */

@media print {
  *,
  *:before,
  *:after {
    background: transparent !important;
    color: #000 !important;
    /* Black prints faster */
    box-shadow: none !important;
    text-shadow: none !important;
  }
  a,
  a:visited {
    text-decoration: underline;
  }
  a[href]:after {
    content: " (" attr(href) ")";
  }
  abbr[title]:after {
    content: " (" attr(title) ")";
  }
  /*
     * Don't show links that are fragment identifiers,
     * or use the `javascript:` pseudo protocol
     */
  a[href^="#"]:after,
  a[href^="javascript:"]:after {
    content: "";
  }
  pre {
    white-space: pre-wrap !important;
  }
  pre,
  blockquote {
    border: 1px solid #999;
    page-break-inside: avoid;
  }
  /*
     * Printing Tables:
     * https://web.archive.org/web/20180815150934/http://css-discuss.incutio.com/wiki/Printing_Tables
     */
  thead {
    display: table-header-group;
  }
  tr,
  img {
    page-break-inside: avoid;
  }
  p,
  h2,
  h3 {
    orphans: 3;
    widows: 3;
  }
  h2,
  h3 {
    page-break-after: avoid;
  }
}

